
- ?/??/????, Hardening of lib/crypto-port.ms
  + Added (md5-hash string) -> string to crypto prims.
  + Modified lib/crypto-port to include an md5-hash in the header of the 
    message content, and a md5-hash of the header and the content hash, for
    message integrity validation.
  + Altered header transmission to handle multi-block headers.

- 4/14/2006, Miscellaneous Bug Fixes
  * Added test directory to package target.
  * Overhauled lib/build to rely on core/module and lib/module.
  * Fixed build-exe when used to compile a module to a binary.
  * Added (read-platform-stub platform)
  * Added stub path configuration to bin/situation.sh
  * Restored queue class definition to lib/queue.
  * Extended read-descr-line to support file descriptors.
  * Altered lib/crypto-port to only operate on 64k messages at a time to
    avoid the possibility of a garbled message header causing an absurdly
    large buffer to be constructed.
  * Fixed cyclic dependency of lib/lib on lib/eval by deferment
  * Added import of lib/string-port to lib/format

- 4/10/2006, Phase Six of the Module System, p6ms
  * Added the core subdirectory -- all modules in core should be 
    embedded by MOSVM applications prior to any imported modules.
  * Added core/file -- wraps file open and file read primitives to create
    a simple API for reading and writing files.
  * Moved read-lisp-file, read-data-file and write-data-file from lib/lib.ms 
    to core/file.ms
  * Added core/config --  provides a generic interface for storing site
    configuration information, or the absence of site configuration.
  * (site-config key) -> value
  * (set-site-config! key value)
  * Moved for-each, map, find-tail, list-index, find, any, fold, filter, 
    filter! to lib/iterate
  * Moved define-class from lib/compile to lib/object
  * Moved define-record-type to lib/record from lib/compile
  * Moved eval to lib/eval
  * Moved all functions for constructing classes to lib/object.ms