@@ -31,6 +31,12 @@
     message integrity validation.
   + Altered header transmission to handle multi-block headers.
 
+- ?/??/????, Broken lib/lib
+  + Broke lib/lib into smaller components and integrated them with lib/compile,
+    lib/assemble, lib/optimize and lib/freeze to fix the make-procedure
+    reliance on lib/eval.
+  + Fixed test-compile
+
 - 4/14/2006, Miscellaneous Bug Fixes
   * Added test directory to package target.
   * Overhauled lib/build to rely on core/module and lib/module.
@@ -44,6 +50,10 @@
     large buffer to be constructed.
   * Fixed cyclic dependency of lib/lib on lib/eval by deferment
   * Added import of lib/string-port to lib/format
+  * Restored ignore-method to core/macro
+  * Added import of lib/eval to lib/mosc.
+  * Fixed bug when compiling under mosvm
+  * Added export of read-line from lib/string-port
 
 - 4/10/2006, Phase Six of the Module System, p6ms
   * Added the core subdirectory -- all modules in core should be 
